package uqam.inf5153.game.parcelle;


public abstract class Bambou {

    public abstract Couleur getCouleur();

}
