package uqam.inf5153.game.parcelle;

public class BambouRose extends Bambou{


    @Override
    public Couleur getCouleur() {
        return Couleur.ROSE;

    }
}
