package uqam.inf5153.game.parcelle;

import uqam.inf5153.game.Coordonnees;

public class BambouVert extends Bambou{

    public BambouVert(Coordonnees coordonnees) {
        super(coordonnees);
    }
}
